﻿Subtitle Edit Changelog

3.6.7 (xth August 2022)
* NEW:
   * Add custom "continuation style" - thx Flitskikker
   * Add Icelandic language auto detect - thx Elheym
   * More options for "Modify selection"
   * CLI change output-file-name - thx BenJamesAndo
   * Add Polish speech recognition vosk/kaldi model
   * Add Netflix Chinese profile - thx Kester
* IMPROVED:
   * Update Polish translation - thx admas
   * Update Bulgarian translation - thx Калин
   * Update Chinese translation - thx nkh0472
   * Update Italian translation - thx bovirus
   * Update Russian translation - Elheym
   * Update Portuguese translation - thx hugok79
   * Update Korean translation - thx domddol
   * Update Finnish translation - thx Teijo S
   * Update French translation - the Peirre
   * Update Vosk to v0.3.42
   * Minor improvements for compare
   * Improve top alignment capture for bdsup - thx tormento
   * Improve DCinema 2010 - thx stephw999
   * Add taskbar progress bar for audio to text - thx lambdacore12
   * Warn about duplicate style names in ASSA/SSA
   * Improve keeping original bd sup colors - thx resolution
* FIXED:
   * Fix crash in "Remove text for HI" - thx loicvan
   * Fix crash in "Fix music notation" - thx ReallyInventiveUserName
   * Fix crash in "Fix music notation" - thx MizzouDawg
   * Fix crash in save as ASSA after SSA - thx darnn
   * Fix crash in compare export - thx 1380
   * Fix crash in visual sync - thx fusefib
   * Fix crash in export ssa styles w dup style name - thx A-Winters
   * Fix crash in bd sup edit when changing color/resolution/alpha
   * Fix for remove ASSA line as empty - thx Leon
   * Fix for finding delay in mkv - thx cyzs233/signedout
   * Fix bd sup edit quick OCR


3.6.6 (25th May 2022)
* NEW:
   * Add toolbar icon for iTT properties - thx Leon
   * Add new sub format - thx Sergiy
   * Option to turn off "word split list" in UI 
   * Custom file ext for custom text formats - thx Leon