@@ -497,42 +497,6 @@
         6L6wVR5GWKw/AKiF4yhMyBvPAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="toolStripButtonIttProperties.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAb/SURBVFhHtZVpTBtnGsctVW2/NeqH9lu7qtT2w6oSypdd
-        Vekum16b7R7di720XbXK0STFHtscJiVgQsOVtEkILCmBtBBSAiQEwpFg7sOYM6GhXD5isBPHHDYYGzy2
-        Z+b973iYIemaRqU0f+knzTvPO89/nnfmeV/ZDxGRy58KxsZG+eXyaL9cFb0Sq4lyybVPieFHIxK7ewen
-        2JvPKPYbfVQsCVAU/FQ8fFQSPFQKnJSWOBXZRofiZL5DeXqH+NjWReS7d7GKPcOc4kMw1EEEKQVoSo0V
-        KhFeKhlLVBpcykzMKY/jnjIXduUZTCvPwag8Pzymqtwlptm8cODA05xidyVR7AWrOIAQFYvgx8kIflWB
-        UP8gGOsM2LkFMLMLCFrsWNGPYqG0FdNJX8GkuogJVTVG1fW4qdZV9iT1PC2m/X4iivdfYuR7zGtVf4RQ
-        +hGwg4MgDANCyENhAyG4uy0Y17bhhroNA3E96I4bMHcm3HxJTP9wkYO7Xwwq9jgZoWo5mNpakFBoQ7OH
-        wfhDMJeb0BM/jI6EUegSJp1NSeYXRZuNhX37tjEH95tCfNVBtQrs8PCGyTfDTMcCmhNNaEycRo3mrqlK
-        s7hNtItUSH6wLMhXTVMqMENbN5cwtXlQm3QPlz+ex8VkV5lo923RcvlOqbUC1XUbJtoK+gtelB/2oCzV
-        h5IU307R9r5WFGp9uLV8acdAAsENk2yFVS+H8oxVnEujUZge0Iu2a1qRa7b7qEP8hpKKQO+Pt/T/z2Ab
-        gzNHQ8jLZPBpFtku2stkHupwzhJ1BG7NZ+CCQXB8u82eqoEzrxGE5YSH2SAj/NlrhK8ZhARYcOKcUIBD
-        0H+fgABBgCbgOAKvh+B0NovPjhHkHOdyRHuZzCVPvzGvzMFSSYOQiON72ZZaCeuRWv5lWOGerWIMQ3Ed
-        6IvrhT5+CJ0Jt9CaMIGmRDNmx1aEOW35blQlu4VvfZ7/1l9q/Sg6EhCqXl5aW4WyCwSZJwnSc9kbgjn2
-        FT7uUGaGHMo8LHfe4t+UE2BDjIA0XhxbgL3ZDmvDHbQnjKEn6zbMLW4YW5awPMevGj/HMkhjtJ2GvoYW
-        vnXtuRCGuhkM9LDw86sRnqPr4qDNI0g+RYf2FeJxmTP29At3lAWYURbDO2YDwy9/GOPxbhjzBtbHEqtL
-        Ab5qCwyfOyNiEvbbIaHqLl1krG+UxaFCgvhigtiz5AWZVXUuyqos4ffvcixbZhEIBARGkrswcnRwfSzh
-        dftRp7mDrkJXRExi2hLEqWwOrc1MRGzYGIL6CwJFKf8C50mUzKg6HzWlqsS4qgaLU05+qfwCA4cHMXD0
-        1vpYYml+RdhQWs96ImISZnMAxz4luN4aioj1TQXxURnBh+UEH1TwL/CNuua5b/hTa0Stg3PIDp/PJ6BP
-        GYU+w7g+lnDNenGR/8muF3kjYhJTJj8+ySWoawtGxK7dCmBPBcH7lwj+XkOek1XFVD12g7pGh08tS4MF
-        Ho9HoD3FhPaM6fWxxJzDg9LUFdQVr0bEJMaMPqQUEFS3ByJihYYA/lNN8Jcamo6pwmNCJxjiDL3hU2so
-        fwoul0ugKdUGXaZjfSzhsLuF1qr+wh8RkxiZXEZiEUFFZ+QcZROLf9QT/LWR7RXMw+qM/1rbljCOZo0J
-        d62zmJubQ32aE/XZC8L1g9hm5vHfDAYVJXRETGJoYhFUCd/zXavfvm91I6aB4M/XCf7QTLSivUzWop54
-        uTZxgtRrbBisvgeHw/FIyOpfxR91BL9rpMlvWsjLov2aribebbxyaBbVWhfME3dgs9nWsEvY74+l2Hch
-        zRWx2+zQm5x4t4XgnXaCtzu4RtH2vi5p5reXJjvZCynLuPr5Em7ftsJq/XGYskxjT08QuzoIftlNs290
-        PnAQPajSFO8Jaf9uqHDDZDJtmSmTGYl9PrzdRfCGnuBXvdwJ0S5SuXLyZEF6oD/8k+VmsbhUuYjx8UlM
-        TEz8IL4en0Jcnxdv9hC83stX38v277pGnhTtNlaBljx7MpuZDO9k4VMrv2QFvQMmjI6Obor6EQv+3Uuv
-        VW0geK2fmXy1lzwr2jxcGRnkmU9OsYa08Kl1hiCpiEPBVRdaDVMYGRn5Tm7y1AyZEGdYwlt81Tv5qqP7
-        ePM+1vDaTfKMmP77SavFE5oCLkdeRDPKL4WDA/v5/Vt1hUaWzoWCjrso7p7BWf0MTvQ4oOl242+dQbzV
-        zS+3WPXP+mlmxwCX89MxPCGm3bwUxeSVA2Xc5b2lNPsBv3+/d4Xgn3UEMY0Ef2riNxSxtX7dSYRvHa76
-        5300yxtffnWQvCKm2breq8Lz/6oh8TH1nO73V2n3u80Ev20lQmuFq47uoN3RBk73i34Sv2MYz4uPPTq9
-        2YJt77SRn+zkCV+Ltzcpmex/NS1dyUTG6lwAAAAASUVORK5CYII=
-</value>
-  </data>
   <data name="toolStripButtonAssStyleManager.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
@@ -863,7 +827,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAD2
-        CAAAAk1TRnQBSQFMAgEBAgEAAXwBLQF8AS0BEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        CAAAAk1TRnQBSQFMAgEBAgEAAYQBLQGEAS0BEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
