@@ -142,4 +142,10 @@
   <data name="SEIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SE2.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="webvtt" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\webvtt.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="itt" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\itt.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
