@@ -2026,6 +2026,9 @@
     <Content Include="DLLs\Voikkox64.dll" />
     <Content Include="DLLs\Voikkox86.dll" />
     <None Include="Resources\SE2.ico" />
+    <None Include="Resources\webvtt.bmp" />
+    <None Include="Resources\webvtt.png" />
+    <None Include="Resources\itt.png" />
     <Content Include="SE2.ico" />
     <None Include="Resources\SE.ico" />
     <None Include="Hunspellx64.dll">
