@@ -8,6 +8,8 @@
    * CLI change output-file-name - thx BenJamesAndo
    * Add Polish speech recognition vosk/kaldi model
    * Add Netflix Chinese profile - thx Kester
+   * Fix casing of some German nouns after audio-to-text
+   * Add toolbar icon for itt properties - thx Leon
 * IMPROVED:
    * Update Polish translation - thx admas
    * Update Bulgarian translation - thx Калин
